--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
 
             canvas.attr("width", width);
             canvas.attr("height", height);
-
+/*
+提交音乐和网址
+*/            
             var opts = {
                 seed: {
                     x: width / 2 - 20,
