--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div id="clock-box">
-                <a href="https://sheshuchen.github.io/lttphoto/" target="_blank">刘桐彤</a> 和 <a href="https://sheshuchen.github.io/love/"
+                <a href="https://sheshuchen.github.io/love/" target="_blank">刘桐彤</a> 和 <a href="https://sheshuchen.github.io/"
                     target="_blank">我</a> 相识的
                 <div id="clock"></div>
             </div>
@@ -64,7 +64,7 @@
 
        
     </div>
-    <a href="music.html">听音乐</a>
+    <a href="https://sheshuchen.github.io/lttphoto/">这里还有一个小彩蛋</a>
     <audio id="media" src="./love.mp3" preload="auto"></audio>
     <!--audio id="media" src="./love.mp3" preload="auto" autoplay muted loop></audio-->
 
